gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - ok.com

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - ok.com
  gateways:
  - test-gateway
  http:
  - name: front
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: test-ip
        port:
          number: 8080
